# ocodex

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  gitit.sh  google.cse
.codex/: Agents.md  config.toml  history.jsonl  mcp_build.js  mcp_codeindex.js  mcp_git.js  mcp_static.js  mcp_todo.js  mcp_websearch_embedded.js
.codex/main_codex.back/: auth.json  config.toml  history.jsonl  update-check.json  version.json
.codex/main_codex.back/sessions/: rollout-2025-08-23-0418f71e-beb0-474c-a03d-1719a72e64cc.json  rollout-2025-08-23-1a0dd4c9-4e06-40c6-97f9-066c07c8793b.json  rollout-2025-08-23-21a796ba-88a8-4e17-8268-392e0a4aef13.json  (+7 more)
codex-rs/: .gitignore  Cargo.toml  README.md  config.md  justfile
codex-rs/arg0/: build.rs
codex-rs/cli/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/ocodex-orchestrator/: Cargo.toml  README.md
codex-rs/ocodex-orchestrator/examples/: qc_demo.rs
codex-rs/ocodex-orchestrator/src/: ab.rs  blackboard.rs  builder.rs  cancel.rs  config.rs  events.rs  lib.rs  memory.rs  memory_sqlite.rs  metrics.rs  planner_llm.rs  planner_simple.rs  policy.rs  qc.rs  queue.rs  router.rs  scheduler.rs  workspace.rs
codex-rs/ocodex-orchestrator/src/workers/: mod.rs
codex-rs/ocodex-orchestrator/tests/: ab.rs  http_qc.rs  smoke.rs
codex-rs/ollama/: Cargo.toml
codex-rs/scripts/: google_search.sh  install_websearch_mcp.sh  mcp_websearch.js
docs/: models-and-ollama-deployment.md
scripts/: add_upstream.sh  build.sh  fetch_upstream.sh  git_merge.sh  merge_upstream.sh  pub_to_sys.sh  set_sys_cmd.sh  setup_mcp_from_env.sh
(+162 files in other folders)
