[package]
name = "ocodex-orchestrator"
version = "0.0.0"
edition = "2024"

[features]
default = []
tui = []
sqlite-memory = []
pty = []
qc-http = ["ureq/json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", optional = true, default-features = true, features = ["json"] }
